--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,13 @@
                    id="nameFriend" 
                    placeholder="Escribe tu nombre">
         </div>
+        <!-- Audio Elements -->
+        <audio id="audioElement" preload="auto">
+            <source src="Floricienta.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="audioElementa" preload="auto">
+            <source src="Mi Corazón, con flores te llevaste mi tristeza, con colores.mp3" type="audio/mpeg">
+        </audio>
         <br>
         <div class="button">
             <button id="btnLogin" class="btn btn-primary btn-user btn-block">
