--- a/src/main/webapp/floresAylin.html
+++ b/src/main/webapp/floresAylin.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./oal.css" />
     <link rel="icon" href="img/flowers.png" type="image/x-icon" />
-    <title>Flower</title>
+    <title>Flores de Aylin</title>
   </head>
   <body class="container">
       <audio src="Mi Corazón, con flores te llevaste mi tristeza, con colores.mp3" autoplay></audio>
-    <div id="lyrics">
-     
-    </div>
-    <h1 class="titulo">Perra</h1>
+    <div id="lyrics"></div>    
   
-    <div class="night"></div>
+    <div class="night">
+      <br>
+      <h1 style="color: yellow; font-family: 'Monaco', monospace;" align="center">hola laika</h1>
+    </div>
     <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
