--- a/src/main/webapp/floresCristina.html
+++ b/src/main/webapp/floresCristina.html
@@ -9,7 +9,7 @@
 <body class="container">
   <div class="night">
     <br>
-    <h1 style="color: yellow; font-family: 'Monaco', monospace;" align="center">Si tu marinero no te dio tus flores nosotros si</h1>
+    <h1 style="color: yellow; font-family: 'Monaco', monospace;" align="center">Te admiro por que empezaste desde abajo y ahi te quedaste, crece enana (con ese tamaño y tremenda bandida)</h1>
   </div>
   <div class="flowers">
     <div class="flower flower--1">
@@ -449,11 +449,11 @@
 
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <audio id="audioElement" src="Floricienta.mp3" preload="auto" autoplay></audio>
+    <audio id="audioCristina" src="DJ PELIGRO.mp3" preload="auto" autoplay></audio>
 
 <script>
     window.onload = function () {
-        let audioElement = document.getElementById("audioElement");
+        let audioElement = document.getElementById("audioCristina");
         audioElement.play(); // Inicia la reproducción del audio automáticamente
     };
 </script>
