--- a/src/main/webapp/floresMadai.html
+++ b/src/main/webapp/floresMadai.html
@@ -449,11 +449,11 @@
 
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <audio id="audioElement" src="Mi Corazón, con flores te llevaste mi tristeza, con colores.mp3" preload="auto" autoplay></audio>
+    <audio id="audioMadai" src="PUROS TAMALES.mp3" preload="auto" autoplay></audio>
 
 <script>
     window.onload = function () {
-        let audioElement = document.getElementById("audioElement");
+        let audioElement = document.getElementById("audioMadai");
         audioElement.play(); // Inicia la reproducción del audio automáticamente
     };
 </script>
