--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,11 +32,17 @@
                    placeholder="Escribe tu nombre">
         </div>
         <!-- Audio Elements -->
-        <audio id="audioElement" preload="auto">
-            <source src="Floricienta.mp3" type="audio/mpeg">
+        <audio id="audioAylin" preload="auto">
+            <source src="Perraza.mp3" type="audio/mpeg">
         </audio>
-        <audio id="audioElementa" preload="auto">
-            <source src="Mi Corazón, con flores te llevaste mi tristeza, con colores.mp3" type="audio/mpeg">
+        <audio id="audioMadai" preload="auto">
+            <source src="PUROS TAMALES.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="audioCristina" preload="auto">
+            <source src="DJ PELIGRO.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="audioSilvana" preload="auto">
+            <source src="Lampara Magica.mp3" type="audio/mpeg">
         </audio>
         <br>
         <div class="button">
