--- a/src/main/webapp/floresSilvana.html
+++ b/src/main/webapp/floresSilvana.html
@@ -9,7 +9,7 @@
 <body class="container">
   <div class="night">
     <br>
-      <h1 style="color: yellow; font-family: 'Monaco', monospace;" align="center">hola laika</h1>
+      <h1 style="color: yellow; font-family: 'Monaco', monospace;" align="center">Eras un habano y ese fumeke te trato como un lucky de sol, ahora tu shisha o no shisha</h1>
   </div>
   <div class="flowers">
     <div class="flower flower--1">
@@ -449,11 +449,11 @@
 
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <audio id="audioElement" src="Mi Corazón, con flores te llevaste mi tristeza, con colores.mp3" preload="auto" autoplay></audio>
+    <audio id="audioSilvana" src="Lampara Magica.mp3" preload="auto" autoplay></audio>
 
 <script>
     window.onload = function () {
-        let audioElement = document.getElementById("audioElement");
+        let audioElement = document.getElementById("audioSilvana");
         audioElement.play(); // Inicia la reproducción del audio automáticamente
     };
 </script>
